# Autounzipe2

./: AutoUnzipService.cpp  CMakeLists.txt  Install-AutoUnzipService.ps1  PROJECT_SETUP.md  README.md  build.bat  config.ini  main.cpp  resource.h  resource.rc  service_install.wxs
